--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "formik": "^2.1.5",
     "history": "^4.10.1",
     "lodash": "^4.17.20",
+    "miragejs": "^0.1.40",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-avatar": "^3.9.7",
