--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "mui-rtk-todolist",
   "version": "1.0.0",
   "private": false,
+  "license": "ISC",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -11,19 +12,39 @@
     "lint": "eslint --fix src/**/*.{js,jsx,ts,tsx}",
     "serve": "serve -s build"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{md,yml,yml,json}": [
-      "prettier --write"
-    ]
+  "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@reduxjs/toolkit": "^1.4.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^10.4.9",
+    "@testing-library/user-event": "^12.1.2",
+    "@types/axios": "^0.14.0",
+    "@types/node": "^14.6.0",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux-logger": "^3.0.8",
+    "@types/shortid": "0.0.29",
+    "@types/styled-components": "^5.1.2",
+    "@types/uuid": "^8.3.0",
+    "axios": "^0.20.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "react-scripts": "5.0.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "sass": "^1.54.4",
+    "shortid": "^2.2.15",
+    "styled-components": "^5.1.1",
+    "typeface-gothic-a1": "0.0.61",
+    "typeface-roboto": "0.0.75",
+    "typesafe-actions": "^5.1.0",
+    "typescript": "^3.9.7",
+    "uuid": "^8.3.0"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,51 +61,18 @@
       "last 1 safari version"
     ]
   },
-  "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@reduxjs/toolkit": "^1.4.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^10.4.9",
-    "@testing-library/user-event": "^12.1.2",
-    "@types/axios": "^0.14.0",
-    "@types/classnames": "^2.2.10",
-    "@types/history": "^4.7.7",
-    "@types/node": "^14.6.0",
-    "@types/react": "^16.9.46",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.9",
-    "@types/redux-logger": "^3.0.8",
-    "@types/shortid": "0.0.29",
-    "@types/styled-components": "^5.1.2",
-    "@types/uuid": "^8.3.0",
-    "axios": "^0.20.0",
-    "classnames": "^2.2.6",
-    "history": "^4.10.1",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
-    "react-scripts": "3.4.3",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0",
-    "shortid": "^2.2.15",
-    "styled-components": "^5.1.1",
-    "typeface-gothic-a1": "0.0.61",
-    "typeface-roboto": "0.0.75",
-    "typesafe-actions": "^5.1.0",
-    "typescript": "^3.9.7",
-    "uuid": "^8.3.0"
-  },
   "devDependencies": {
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb-typescript-prettier": "^3.1.0",
-    "eslint-plugin-jest": "^23.20.0",
-    "eslint-plugin-react-hooks": "^4.1.0",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.3.0",
-    "prettier": "^2.0.5"
+    "eslint": "^8.x",
+    "eslint-config-airbnb-typescript-prettier": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "prettier": "^2.7.1"
+  },
+  "engines": {
+    "node": "^16.x"
+  },
+  "resolutions": {
+    "@types/react": "17.x",
+    "@types/react-dom": "17.x"
   }
 }
